@@ -5,6 +5,7 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.node.ArrayNode;
 import com.fasterxml.jackson.dataformat.yaml.YAMLFactory;
 import io.unitycatalog.server.service.credential.CredentialContext;
+import io.unitycatalog.server.utils.NormalizedURL;
 import lombok.SneakyThrows;
 import org.apache.iceberg.exceptions.NotAuthorizedException;
 
@@ -18,40 +19,39 @@ import java.util.stream.Collectors;
 public class AwsPolicyGenerator {
 
   static final List<String> SELECT_ACTIONS = List.of("s3:GetO*");
-  static final List<String> UPDATE_ACTIONS =
-    List.of("s3:GetO*", "s3:PutO*", "s3:DeleteO*", "s3:*Multipart*");
+  static final List<String> UPDATE_ACTIONS = List.of(
+      "s3:GetO*", "s3:PutO*", "s3:DeleteO*", "s3:*Multipart*");
 
-  static final String POLICY_STATEMENT =
-    """
-    Version: 2012-10-17
-    Statement: []
-    """;
+  static final String POLICY_STATEMENT = """
+      Version: 2012-10-17
+      Statement: []
+      """;
 
-  static final String BUCKET_STATEMENT =
-    """
-    Effect: Allow
-    Action:
-      - s3:ListBucket
-    Resource: []
-    Condition:
-      StringLike:
-        "s3:prefix": []
-    """;
+  static final String BUCKET_STATEMENT = """
+      Effect: Allow
+      Action:
+        - s3:ListBucket
+      Resource: []
+      Condition:
+        StringLike:
+          "s3:prefix": []
+      """;
 
-  static final String OPERATION_STATEMENT =
-    """
-    Effect: Allow
-    Action: []
-    Resource: []
-    """;
+  static final String OPERATION_STATEMENT = """
+      Effect: Allow
+      Action: []
+      Resource: []
+      """;
 
   private static final ObjectMapper JSON_MAPPER = new ObjectMapper();
   private static final ObjectMapper YAML_MAPPER = new ObjectMapper(new YAMLFactory());
 
-  // This can support generating a policy across multiple buckets and paths, however, the assumed role
-  // the policy is applied to for a scoped-session needs to have access across those buckets
+  // This can support generating a policy across multiple buckets and paths, however, the assumed
+  // role the policy is applied to for a scoped-session needs to have access across those buckets
   @SneakyThrows
-  public static String generatePolicy(Set<CredentialContext.Privilege> privileges, List<String> locations) {
+  public static String generatePolicy(
+      Set<CredentialContext.Privilege> privileges,
+      List<NormalizedURL> locations) {
     JsonNode policyRoot = loadYaml(POLICY_STATEMENT);
     ArrayNode policyStatement = (ArrayNode) policyRoot.findPath("Statement");
     JsonNode operationsStatement = loadYaml(OPERATION_STATEMENT);
@@ -65,56 +65,83 @@ public class AwsPolicyGenerator {
       SELECT_ACTIONS.forEach(actions::add);
     } else {
       throw new NotAuthorizedException(
-        "Can't generate policy for unknown privileges '%s' for locations: '%s'"
-          .formatted(privileges, locations));
+          String.format("Can't generate policy for unknown privileges '%s' for locations: '%s'",
+              privileges, locations));
     }
 
     // Group each location by s3 bucket it's located in, then for each
     // bucket, add the bucket arn for the listBucket and operations statements,
     // then add each path as a conditional prefix
-    getBucketToPathsMap(locations).forEach(
-      (bucketName, paths) -> {
-        JsonNode listStatement = loadYaml(BUCKET_STATEMENT);
-        policyStatement.add(listStatement);
+    getBucketToPathsMap(locations).forEach((bucketName, paths) -> {
+      JsonNode listStatement = loadYaml(BUCKET_STATEMENT);
+      policyStatement.add(listStatement);
 
-        ArrayNode bucketResource = (ArrayNode) listStatement.findPath("Resource");
-        ArrayNode operationsResource = (ArrayNode) operationsStatement.findPath("Resource");
-        bucketResource.add("arn:aws:s3:::%s".formatted(bucketName));
+      ArrayNode bucketResource = (ArrayNode) listStatement.findPath("Resource");
+      ArrayNode operationsResource = (ArrayNode) operationsStatement.findPath("Resource");
+      bucketResource.add(String.format("arn:aws:s3:::%s", bucketName));
 
-        ArrayNode conditionalPrefixes = (ArrayNode) listStatement.findPath("s3:prefix");
-        paths.forEach(
-          path -> {
-            // remove any preceding forward slashes
-            // TODO: potentially sanitize/encode the whole path to deal with problematic chars
-            String sanitizedPath = path.replaceAll("^/+", "");
+      ArrayNode conditionalPrefixes = (ArrayNode) listStatement.findPath("s3:prefix");
+      paths.forEach(path -> {
+        // remove any preceding forward slashes
+        String sanitizedPath = escapeIamSpecialCharacters(path.replaceAll("^/+", ""));
 
-            if (sanitizedPath.isEmpty()) {
-              conditionalPrefixes.add("*");
-              operationsResource.add("arn:aws:s3:::%s/*".formatted(bucketName));
-            } else {
-              conditionalPrefixes.add(sanitizedPath);
-              conditionalPrefixes.add(sanitizedPath + "/");
-              conditionalPrefixes.add(sanitizedPath + "/*");
+        if (sanitizedPath.isEmpty()) {
+          conditionalPrefixes.add("*");
+          operationsResource.add(String.format("arn:aws:s3:::%s/*", bucketName));
+        } else {
+          conditionalPrefixes.add(sanitizedPath);
+          conditionalPrefixes.add(sanitizedPath + "/");
+          conditionalPrefixes.add(sanitizedPath + "/*");
 
-              operationsResource.add("arn:aws:s3:::%s/%s/*".formatted(bucketName, sanitizedPath));
-              operationsResource.add("arn:aws:s3:::%s/%s".formatted(bucketName, sanitizedPath));
-            }
-          });
+          operationsResource.add(String.format("arn:aws:s3:::%s/%s/*", bucketName, sanitizedPath));
+          operationsResource.add(String.format("arn:aws:s3:::%s/%s", bucketName, sanitizedPath));
+        }
       });
+    });
 
     return JSON_MAPPER.writeValueAsString(policyRoot);
   }
 
-  private static Map<String, List<String>> getBucketToPathsMap(List<String> locations) {
+  /**
+   * Makes an S3 path safe to include in an IAM policy.
+   *
+   * <p>S3 treats {@code *}, {@code ?}, and {@code $} as ordinary characters in object
+   * names. IAM gives them special meanings:
+   *
+   * <ul>
+   *   <li>{@code *} matches any number of characters. For example, {@code reports/*}
+   *       matches every object under {@code reports/}.
+   *   <li>{@code ?} matches exactly one character. For example, {@code file?.txt}
+   *       matches {@code file1.txt}.
+   *   <li>{@code ${...}} is a policy variable whose value IAM fills in when it evaluates
+   *       the policy. For example, {@code ${aws:username}} is replaced with the caller's
+   *       IAM username.
+   * </ul>
+   *
+   * <p>Therefore, copying an S3 path directly into a policy could grant access to more
+   * objects than the path names. AWS provides {@code ${*}}, {@code ${?}}, and {@code ${$}}
+   * to make IAM match the literal {@code *}, {@code ?}, and {@code $} characters instead.
+   *
+   * <p>We replace {@code $} first because the replacements for {@code *} and {@code ?}
+   * also contain a dollar sign.
+   *
+   * @see <a href="https://docs.aws.amazon.com/IAM/latest/UserGuide/reference_policies_variables.html">
+   *     AWS documentation for IAM policy variables</a>
+   */
+  private static String escapeIamSpecialCharacters(String keyPrefix) {
+    return keyPrefix.replace("$", "${$}").replace("*", "${*}").replace("?", "${?}");
+  }
+
+  private static Map<String, List<String>> getBucketToPathsMap(List<NormalizedURL> locations) {
     return locations.stream()
-      .map(URI::create)
-      .collect(Collectors.toMap(
-        URI::getHost,
-        uri -> new LinkedList<>(List.of(uri.getPath())),
-        (map, newPaths) -> {
-          map.addAll(newPaths);
-          return map;
-        }));
+        .map(NormalizedURL::toUri)
+        .collect(Collectors.toMap(
+            URI::getHost,
+            uri -> new LinkedList<>(List.of(uri.getPath())),
+            (map, newPaths) -> {
+              map.addAll(newPaths);
+              return map;
+            }));
   }
 
   @SneakyThrows
