@@ -15,12 +15,11 @@ import io.unitycatalog.server.exception.ErrorCode;
 import io.unitycatalog.server.exception.OAuthInvalidClientException;
 import io.unitycatalog.server.exception.OAuthInvalidRequestException;
 import io.unitycatalog.server.security.SecurityContext;
-import java.net.URL;
+import java.net.URI;
 import java.nio.file.Path;
+import java.security.interfaces.ECPublicKey;
 import java.security.interfaces.RSAPublicKey;
 import java.util.Map;
-
-import io.unitycatalog.server.service.AuthService;
 import lombok.SneakyThrows;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -38,29 +37,36 @@ public class JwksOperations {
   }
 
   @SneakyThrows
-  public JWTVerifier verifierForIssuerAndKey(String issuer, String keyId) {
+  public JWTVerifier verifierForIssuerAndKey(String issuer, String keyId, String alg) {
     JwkProvider jwkProvider = loadJwkProvider(issuer);
     Jwk jwk = jwkProvider.get(keyId);
 
-    if (!"RSA".equalsIgnoreCase(jwk.getPublicKey().getAlgorithm())) {
-      throw new OAuthInvalidRequestException(ErrorCode.ABORTED,
-              String.format("Invalid algorithm '%s' for issuer '%s'",
-                      jwk.getPublicKey().getAlgorithm(), issuer));
-    }
-
-    Algorithm algorithm = algorithmForJwk(jwk);
+    Algorithm algorithm = algorithmForJwk(jwk, alg);
 
     return JWT.require(algorithm).withIssuer(issuer).build();
   }
 
   @SneakyThrows
-  private Algorithm algorithmForJwk(Jwk jwk) {
-    return switch (jwk.getAlgorithm()) {
-      case "RS256" -> Algorithm.RSA256((RSAPublicKey) jwk.getPublicKey(), null);
-      case "RS384" -> Algorithm.RSA384((RSAPublicKey) jwk.getPublicKey(), null);
-      case "RS512" -> Algorithm.RSA512((RSAPublicKey) jwk.getPublicKey(), null);
+  private Algorithm algorithmForJwk(Jwk jwk, String alg) {
+    String keyType = jwk.getType();
+
+    return switch (keyType) {
+      case "RSA" -> switch (alg) {
+        case "RS256" -> Algorithm.RSA256((RSAPublicKey) jwk.getPublicKey(), null);
+        case "RS384" -> Algorithm.RSA384((RSAPublicKey) jwk.getPublicKey(), null);
+        case "RS512" -> Algorithm.RSA512((RSAPublicKey) jwk.getPublicKey(), null);
+        default -> throw new OAuthInvalidClientException(ErrorCode.ABORTED,
+                String.format("Unsupported RSA algorithm: %s", alg));
+      };
+      case "EC" -> switch (alg) {
+        case "ES256" -> Algorithm.ECDSA256((ECPublicKey) jwk.getPublicKey(), null);
+        case "ES384" -> Algorithm.ECDSA384((ECPublicKey) jwk.getPublicKey(), null);
+        case "ES512" -> Algorithm.ECDSA512((ECPublicKey) jwk.getPublicKey(), null);
+        default -> throw new OAuthInvalidClientException(ErrorCode.ABORTED,
+                String.format("Unsupported ECDSA algorithm: %s", alg));
+      };
       default -> throw new OAuthInvalidClientException(ErrorCode.ABORTED,
-              String.format("Unsupported algorithm: %s", jwk.getAlgorithm()));
+              String.format("Unsupported key type: %s", keyType));
     };
   }
 
@@ -90,23 +96,25 @@ public class JwksOperations {
       LOGGER.debug("path: {}", path);
 
       String response = webClient
-              .get(path)
-              .aggregate()
-              .join()
-              .contentUtf8();
+          .get(path)
+          .aggregate()
+          .join()
+          .contentUtf8();
 
       // TODO: We should cache this. No need to fetch it each time.
       Map<String, Object> configMap = mapper.readValue(response, new TypeReference<>() {});
 
       if (configMap == null || configMap.isEmpty()) {
-        throw new OAuthInvalidRequestException(ErrorCode.ABORTED, "Could not get issuer configuration");
+        throw new OAuthInvalidRequestException(ErrorCode.ABORTED,
+            "Could not get issuer configuration");
       }
 
       String configIssuer = (String) configMap.get("issuer");
       String configJwksUri = (String) configMap.get("jwks_uri");
 
       if (!configIssuer.equals(issuer)) {
-        throw new OAuthInvalidRequestException(ErrorCode.ABORTED, "Issuer doesn't match configuration");
+        throw new OAuthInvalidRequestException(ErrorCode.ABORTED,
+            "Issuer doesn't match configuration");
       }
 
       if (configJwksUri == null) {
@@ -114,7 +122,8 @@ public class JwksOperations {
       }
 
       // TODO: Or maybe just cache the provider for reuse.
-      return new JwkProviderBuilder(new URL(configJwksUri)).cached(false).build();
+      return new JwkProviderBuilder(URI.create(configJwksUri).toURL()).cached(false).build();
     }
   }
 }
+
